--- a/public/style.css
+++ b/public/style.css
@@ -14,3 +14,19 @@ header {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 25px;
 }
+
+.projectListContainer {
+    display: inline-flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.singleProjectContainer {
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+    border: 7px solid black;
+    border-radius: 1%;
+    padding: 5px;
+    margin: 5px
+}
