added client dashboard with links in Single Project

--- a/public/style.css
+++ b/public/style.css
@@ -69,3 +69,9 @@ li {
     flex-direction: column;
     text-align: center;
 }
+
+.clientBio {
+    text-align: center;
+    padding: 10px;
+    font-size: 40px;
+}
