--- a/public/style.css
+++ b/public/style.css
@@ -15,6 +15,11 @@ header {
     font-size: 25px;
 }
 
+.loadingMessage {
+    text-align: center;
+    font-size: 60px;
+}
+
 .statisticsBanner {
     display: inline-flex;
     justify-content: space-evenly;
@@ -54,8 +59,9 @@ li {
 .employeeBio {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
-    padding: 10px
+    justify-content: center;
+    align-items: center;
+    padding: 20px
 }
 
 .employeeAvatar {
@@ -68,6 +74,7 @@ li {
     display: flex;
     flex-direction: column;
     text-align: center;
+    margin-left: 20px;
 }
 
 .clientBio {
