--- a/public/style.css
+++ b/public/style.css
@@ -15,6 +15,13 @@ header {
     font-size: 25px;
 }
 
+.homeButton {
+    color: black;
+    padding: 10px;
+    background-color: antiquewhite;
+    text-decoration: none;
+}
+
 .loadingMessage {
     text-align: center;
     font-size: 60px;
