added further statistics to statistics overview

--- a/public/style.css
+++ b/public/style.css
@@ -31,6 +31,7 @@ header {
     display: inline-flex;
     justify-content: space-evenly;
     width: 100%;
+    flex-wrap: wrap;
     margin-top: 10px;
     background-color: black;
     color: antiquewhite;
