--- a/public/style.css
+++ b/public/style.css
@@ -39,7 +39,8 @@ header {
 }
 
 .projectListContainer {
-    display: inline-flex;
+    display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
 }
