--- a/public/style.css
+++ b/public/style.css
@@ -195,3 +195,80 @@ li {
     margin-left: 10px;
     font-size: 30px;
 }
+
+.projectTitle {
+    font-size: large;
+}
+
+@media only screen and (max-width: 1300px) {
+    .headerElement {
+        display: none;
+    }
+
+    .singleProjectContainer {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        justify-content: space-between;
+        width: 45%;
+        border: 7px solid black;
+        border-radius: 1%;
+        padding: 5px;
+        margin: 5px
+    }
+
+    .statisticsBanner {
+        display: flex;
+        font-size: small;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        flex-wrap: wrap;
+        margin-top: 10px;
+        background-color: black;
+        color: antiquewhite;
+        font-size: 25px
+    }
+}
+
+@media only screen and (max-width: 1000px) {
+
+
+    .projectListContainer {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-content: center;
+    }
+
+    .singleProjectContainer {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        justify-content: space-between;
+        width: 70%;
+        border: 7px solid black;
+        border-radius: 1%;
+        padding: 5px;
+        margin: 5px
+    }
+
+    .filterStyling {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        padding: 0px 0px;
+        margin: 0px 10px;
+        align-items: center;
+    }
+
+    .filterContainer {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        flex-wrap: nowrap
+    }
+
+}
