--- a/public/style.css
+++ b/public/style.css
@@ -247,6 +247,19 @@ li {
         align-content: center;
     }
 
+    .statisticsBanner {
+        display: flex;
+        font-size: small;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        flex-wrap: wrap;
+        margin-top: 10px;
+        background-color: black;
+        color: antiquewhite;
+        font-size: 20px
+    }
+
     .singleProjectContainer {
         display: flex;
         flex-direction: column;
